# thesis-kedge

./: Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRITY_STATUS.md  PRODUCTION_READY_SUMMARY.md  README.md  RUNBOOK.md  SCALING_SUCCESS_SUMMARY.md  SEPHORA_EXTRACTION_SUMMARY.md  THESIS_EXECUTION_SUMMARY.md  collect_real_data.py  config.yaml  pyproject.toml
data/: sample_run_manifest.json
data/bronze/: marionnaud_products.parquet  marionnaud_products_index.parquet  marionnaud_reviews.parquet  nocibe_products.parquet  nocibe_products_index.parquet  nocibe_reviews.parquet
data/fixtures/: ablation_results.json  cluster_profiles.json  cluster_statistics.csv  clustered_products.parquet  eda_luxury_counts_by_brand.csv  eda_luxury_vs_non_luxury_comparison.csv  eda_price_tiles_by_category.csv  eda_refillable_evidence_analysis.csv  eda_refillable_share_by_brand.csv  eda_review_health_metrics.csv  eda_summary.json  eda_text_sufficiency_for_nlp.csv  feature_descriptions.json  feature_importance.csv  feature_matrix.parquet  kept_dropped_report.csv  price_stats.parquet  products_with_luxury.parquet  sample_price_stats.json  sample_price_stats.parquet  sample_products.json  sample_products.parquet  sample_reviews.json  sample_reviews.parquet  sephora_products.json  sephora_products.parquet  sephora_reviews.json  sephora_reviews.parquet  sephora_summary.json
data/reference/: brands_tiers.json  categories_map.json
logs/: production_report.json
src/: cli.py
src/analysis/: clustering_analysis.py  eda_analysis.py  feature_engineering.py  (+1 more)
tests/: test_robots.py  test_schemas.py
(+27 files in other folders)
